Fixed issue with line breaking being different for generated and default font by adding non breaking spaces and getting rid of B code for spaces. Also pre-wrap in css.

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -137,6 +137,7 @@ textarea {
     position: relative;
     top: -45px;
     /*word-break: break-word;*/
+    white-space: pre-wrap;
 }
 .valuePadding {
   border: 0px inset #ccc;
